# gcp-abuse-scanner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_check.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: allowlist.md  apis.md  architecture.md  iam-setup.md
docs/checks/: crypto_mining.md  gemini_abuse.md
examples/: config.example.yaml
gcp_abuse_scanner/: __init__.py  cli.py
gcp_abuse_scanner/auth/: __init__.py  manager.py  scope.py
gcp_abuse_scanner/checks/: __init__.py  base.py
gcp_abuse_scanner/checks/common/: __init__.py  cmn_budgets.py  cmn_extended.py
gcp_abuse_scanner/checks/crypto_mining/: __init__.py  cm_cloudrun.py  cm_compute.py  cm_compute_extended.py  cm_gke.py  cm_iam.py  cm_iam_extended.py
gcp_abuse_scanner/checks/gemini_abuse/: __init__.py  gem_api_keys.py  gem_extended.py  gem_iam.py
gcp_abuse_scanner/collectors/: __init__.py  api_keys.py  base.py  billing.py  cache.py  cloud_run.py  compute.py  engine.py  gke.py  iam.py  network.py  org_policy.py  quota.py  recommender.py  service_usage.py  vertex_ai.py
gcp_abuse_scanner/models/: __init__.py  finding.py  inventory.py  report.py
gcp_abuse_scanner/remediation/: __init__.py
gcp_abuse_scanner/reporters/: __init__.py  console_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
gcp_abuse_scanner/reporters/templates/: report.html.j2
gcp_abuse_scanner/scoring/: __init__.py  engine.py
gcp_abuse_scanner/utils/: __init__.py
scripts/: enable_apis.sh
tests/: conftest.py
tests/fixtures/: inventory_crypto_mining.json  inventory_gemini_abuse.json
tests/unit/: test_auth.py  test_cli.py  test_collectors.py  test_crypto_mining_checks.py  test_crypto_mining_extended.py  test_fmt_exc.py  test_gemini_abuse_checks.py  test_gemini_extended.py  test_reporters_and_cache.py  test_scoring.py  test_scoring_extended.py
