[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcp-abuse-scanner"
version = "0.1.2"
description = "Preventive GCP security scanner for crypto mining and Gemini API abuse vectors"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "GCP Abuse Scanner Contributors" }]
keywords = ["gcp", "security", "scanner", "crypto-mining", "gemini", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # GCP SDKs
    "google-cloud-asset>=3.25.0",
    "google-cloud-compute>=1.18.0",
    "google-cloud-container>=2.45.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-resource-manager>=1.12.0",
    "google-cloud-service-usage>=1.10.0",
    "google-api-python-client>=2.130.0",
    "google-cloud-aiplatform>=1.55.0",
    "google-cloud-billing>=1.13.0",
    "google-cloud-monitoring>=2.21.0",
    "google-auth>=2.29.0",
    # Data models
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Resilience
    "tenacity>=8.3.0",
    # Config
    "PyYAML>=6.0.1",
    # Reporting
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
]

[project.scripts]
gcp-abuse-scanner = "gcp_abuse_scanner.cli:app"

[project.urls]
Homepage = "https://github.com/lmoreno0435/gcp-abuse-scanner"
Repository = "https://github.com/lmoreno0435/gcp-abuse-scanner"
Issues = "https://github.com/lmoreno0435/gcp-abuse-scanner/issues"
Documentation = "https://github.com/lmoreno0435/gcp-abuse-scanner/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["gcp_abuse_scanner"]
include = ["gcp_abuse_scanner/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
  "E501",    # line too long — handled by black
  "UP042",   # StrEnum migration — keep str+Enum for broader compatibility
  "F821",    # false positive on lazy imports inside functions
  "N812",    # __version__ aliased as _TOOL_VERSION — intentional naming
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# GCP client libraries lack complete type stubs; strict mode produces too many false positives
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=gcp_abuse_scanner --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["gcp_abuse_scanner"]
omit = ["tests/*"]
